CloudFormation/test02_ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: lecture10_ec2_setting

Parameters: 
  NameBase:
    Description: this is base name.
    Type: String
    Default: lecture10
  StackNameVPC:
    Description: vpc stack name.
    Type: String
    Default: test01
    
Resources: 
# ------------------------------------------------------------#
#  SecurityGroup
# ------------------------------------------------------------#
  EC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${NameBase}-sg-web created
      GroupName: !Sub ${NameBase}-sg-web
      VpcId:
        Fn::ImportValue: !Sub ${StackNameVPC}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        # SSH(MYIPはセキュリティの観点から後で設定する)
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: keyname
          Value: !Sub ${NameBase}-sg-ec2
# ------------------------------------------------------------#
#  EC2Instance
# ------------------------------------------------------------#
  myEC2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: raisetech
      ImageId: ami-05b37ce701f85f26a
      InstanceType: t2.micro
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref EC2SG
          SubnetId:
            Fn::ImportValue: !Sub ${StackNameVPC}-PublicSubnet1
      Tags:
        - Key: keyname
          Value: !Sub ${NameBase}-ec2
Outputs:
  EC2SG:
    Value: !Ref EC2SG
    Export:
      Name: !Sub ${AWS::StackName}-sg-ec2
  myEC2:
    Value: !Ref myEC2
    Export:
      Name: !Sub ${AWS::StackName}-ec2
